# spatio_hydrograph

./: .gitignore  CITATION.cff  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  integration_with_inundation.py
src/spatio_hydrograph/: __init__.py  config.py  connectivity.py  habitat_analysis.py  landscape_metrics.py  raster_processing.py  visualization.py
tests/: conftest.py  test_config.py  test_connectivity.py  test_habitat_analysis.py  test_landscape_metrics.py  test_raster_processing.py  test_visualization.py
