[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatio-hydrograph"
version = "0.1.0"
description = "Python package for spatio-temporal analysis of Yolo Bypass inundation using satellite imagery"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Shruti Khanna", email = ""},
    {name = "Fernando E. Romero Galvan", email = "fernando.romerogalvan@water.ca.gov"}
]
keywords = ["hydrology", "geospatial", "landscape-metrics", "yolo-bypass", "inundation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "geopandas>=0.13.0",
    "rasterio>=1.3.0",
    "rioxarray>=0.14.0",
    "xarray>=2023.0.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "scipy>=1.10.0",
    "scikit-image>=0.20.0",
    "shapely>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.1.0",
    "mypy>=1.4.0",
    "types-Pillow>=10.0.0",
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Repository = "https://github.com/ferg-dwr/spatio_hydrograph"
Documentation = "https://github.com/ferg-dwr/spatio_hydrograph#readme"
"Bug Tracker" = "https://github.com/ferg-dwr/spatio_hydrograph/issues"

[tool.setuptools]
packages = ["spatio_hydrograph"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "D",      # pydocstyle
]
ignore = [
    "E501",   # line too long (ruff format handles this)
    "N806",   # variable in function should be lowercase
    "D100",   # Missing module docstring
    "D104",   # Missing package docstring
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["spatio_hydrograph"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "rasterio.*",
    "rioxarray.*",
    "xarray.*",
    "scipy.*",
    "scikit_image.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -ra --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/spatio_hydrograph"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true
